# RegenX

./: .gitignore  CMakeLists.txt  README.md  RegenXIO.cpp  RegenXIO.h  bootstrap_arch.sh  main.cpp
RegenX/: RegenXIO.cpp  RegenXIO.hpp  RegenXLog.cpp  RegenXMath.cpp  RegenXMath.hpp
docs/: TODO_LIBS.md
editor/: CMakeLists.txt
editor/include/: RegenXEditor.hpp
editor/src/: RegenXEditor.cpp
editor/visual/: VisualGraph.cpp  VisualGraph.hpp
include/: Behaviors.h  EditorInterface.h  Engine.h  EngineTypes.h  Input.h  Objects.h  Renderer.h  Renderer2D.h  Sprite.h  TestObject.h  WindowManager.h
include/RegenX/: RegenXIO.cpp  RegenXIO.hpp  RegenXLog.cpp  RegenXLog.hpp  RegenXMath.cpp  RegenXMath.hpp  RegenXType.cpp  RegenXWindow.cpp  RegenXWindow.hpp
include/RegenX/Core/: RegenXIO.hpp  RegenXLog.hpp  RegenXMath.hpp  RegenXType.hpp  RegenXUtil.hpp
include/RegenX/Networking/: RegenXHttp.hpp
include/RegenX/Renderer/: EBO.hpp  Texture.hpp  VAO.hpp  VBO.hpp
include/RegenX/Window/: RegenXWindow.hpp
include/RegenXRenderer/: EBO.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp
include/glad/: glad.h
include/rendering/: EBO.cpp  EBO.h  Shader.cpp  Shader.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h
notes/: 4.2.26.axl  how todo the texture thingy.axl
resource/shaders/: default.frag  default.vert  shader.frag  shader.vert
src/: EditorInterface.cpp  Engine.cpp  SAVEOPENGL.main.cpp.later  glad.c  keep.cpp  main.cpp  shader.vert  sv
src/Core/: RegenXIO.cpp  RegenXLog.cpp  RegenXMath.cpp  RegenXType.cpp  RegenXUtil.cpp
src/Networking/: RegenXHttp.cpp
src/RegenX/: RegenXIO.cpp  RegenXIO.h  RegenXLog.h
src/RegenX/Engine/: RegenXPlatform.cpp  RegenXPlatform.h
src/RegenX/Functions/: RegenXIO.cpp  RegenXIO.h  RegenXLog.cpp
src/RegenX/RegenXScript/: RegenXLua.cpp  RegenXLua.h
src/RegenX/RegenXScript/Lua/: RegenXLua.cpp
src/RegenX/RegenXScript/Lua/lua-test/: log_test.lua
src/RegenX/scripting/: RegenXLua.cpp  RegenXLua.h
src/Renderer/: EBO.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/Window/: RegenXWindow.cpp
src/lua-test/: io_test.lua
src/regenx/: CMakeLists.txt
src/regenx/assets/: AssetRegistry.cpp  AssetRegistry.hpp
src/regenx/audio/: AudioDevice.cpp  AudioDevice.hpp
src/regenx/core/: IO.cpp  Log.cpp
src/regenx/ecs/: World.cpp  World.hpp
src/regenx/net/: NetClient.cpp  NetClient.hpp  NetServer.cpp  NetServer.hpp
src/regenx/platform/: Window.cpp  Window.hpp
src/regenx/render/: Renderer.cpp  Renderer.hpp  SpriteBatch.cpp  SpriteBatch.hpp  TextRenderer.cpp  TextRenderer.hpp
src/regenx/script/lua/: LuaVM.cpp
src/regenx/script/lua/tests/: io_test.lua
src/regenx/ui/: DebugUI.cpp  DebugUI.hpp
tests/: RegenXTest.hpp
